src/app/container/order-editor/order-editor.component.scss
:host {
  display: flex;
  flex-direction: column;
  height: 100%;
  overflow-y: auto;

  .row {
    margin-left: 0;
    margin-right: 0;
  }
}

.order-editor {
  cursor: default !important;
  min-height: 90%;
  overflow-y: auto;
}

.order-editor__section__title {
  padding: 0 15px;
}

.order-editor__header {
  display: block;
  position: absolute;
  -webkit-backdrop-filter: blur(5px);
  background: #fafafaef;
  padding: 24px 0;
  z-index: 1;
  left: 0;
  right: 0;
}

.order-editor__btn--nav {
  min-width: 0;
}

.order-editor__container {
  flex: 1;
}

.order-editor__section:first-child .order-editor__section__title {
  margin-top: 0;
}

.order-editor__no-items {
  padding: 64px;
  text-align: center;
}

// Desktop-specific styles
@media (min-width: 800px) {
  .order-editor {
    padding-top: 96px;
    padding-bottom: 24px;
  }
}

// mobile styles
@media (max-width: 800px) {
  .order-editor__header {
    position: initial;
  }
}

